[tool.poetry]
name = "pytorch-qulacs"
version = "0.1.0"
description = ""
authors = ["sdual <shr.nrht.0623@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Qulacs = "^0.2.0"
numpy = "^1.20.1"
torch = "^1.8.0"
torchvision = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
